Dark theme available

--- a/imageUploader/angular.json
+++ b/imageUploader/angular.json
@@ -28,9 +28,17 @@
             ],
             "styles": [
               "src/styles.css",
+              {
+                "input": "src/theme-lara-light-blue.css",
+                "bundleName": "lara-light-blue",
+                "inject": false
+              },
+              {
+                "input": "src/theme-lara-dark-blue.css",
+                "bundleName": "lara-dark-blue",
+                "inject": false
+              },
               "node_modules/primeicons/primeicons.css",
-              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeflex/primeflex.css"  
             ],
             "scripts": []
