--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "aws-sdk": "^2.1188.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-validator": "^6.14.2",
+    "uniqid": "^5.4.0"
   }
 }
